Updated to Minecraft 1.18.1
added settings for min and max height
- added commands to configurate
- added show value in plugin overview

reworked configuration loading and saving

reworked Lang
- showing console and players same messages